tests/negative/neg_try_send_reassign_without_check.safe
-- Test: neg_try_send_reassign_without_check
-- Description: Access-typed channel elements are rejected before try_send reassignment checks run.
-- Expected: REJECT source_frontend_error

package Neg_Try_Send_Reassign_Without_Check

   type Payload is record
      Value : Integer;


   type Payload_Ptr is access Payload;

   channel Data_Ch : Payload_Ptr capacity 1;

   function Run
      Source  : Payload_Ptr = new ((Value = 1) as Payload);
      Success : Boolean = False;

      try_send Data_Ch, Source, Success;
      Source = new ((Value = 2) as Payload);



